# emotion_detection

./: main.py  pyproject.toml  train.py
src/: data.py  dataset.py  metrics.py  model.py
src/emotion_detection/: cli.py  data.py  dataset.py  eda.py  metrics.py  model.py  utils.py
tests/: test_metrics.py
